<resources>
    <string name="app_name">Budgetocracy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="categories">Catégories</string>
    <string name="graphics">Graphiques</string>
    <string name="scan">Scan</string>
    <string name="expensesAdd">Ajout dépenses</string>
    <string name="categorieNameActivity">Toutes les dépenses</string>
    <string name="amount">Montant</string>
    <string name="name">Nom</string>
    <string name="category">Catégorie</string>
    <string name="save">Sauvegarder</string>
    <string name="pick_category">Sélectionnez une catégorie</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="choix_unique_button">Une fois</string>
    <string name="choix_recurrent_button">Récurrent</string>
    <string name="every_week">Semaine</string>
    <string name="every_month">Mois</string>
    <string name="every_year">Année</string>
    <string name="frequency">Fréquence</string>
    <string name="repeatEvery">Répéter chaque :</string>
    <string name="cancel">Annuler</string>
    <string name="OK">OK</string>
    <string name="empty_name_error">Vous devez saisir un nom.</string>
    <string name="successful_expense_add">Dépense ajoutée avec succès !</string>
    <string name= "successful_expense_modification">Dépense modifiée avec succès !</string>
    <string name="empty_category_error">Vous devez choisir une catégorie.</string>
    <string name="empty_amount_error">Vous devez saisir un montant.</string>
    <string name="failed_expense_add">Echec lors de l\'ajout de la dépense. Veuillez ré-essayer.</string>
    <string name="empty_category_db">Vous n\'avez encore créé aucune catégorie.</string>
    <string name="add">Créer une catégorie</string>
    <string name="negative_amount_error">Veuillez saisir un montant valide positif.</string>
    <string name="successful_category_add">Catégorie crée avec succès !</string>


    <string name="research">Recherche</string>
    <string name="research_SortDate">Date</string>
    <string name="research_SortAmount">Montant</string>
    <string name="research_SortName">Nom</string>
    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Août</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Décembre</string>
    <string name="modifierDepense">Modifier la dépense</string>
    <string name="alimentation">Alimentation</string>
    <string name="logement">Logement</string>
    <string name="telephone">Téléphone</string>
    <string name="internet">Internet</string>
    <string name="loisirs">Loisirs</string>
    <string name="transport">Transport</string>
    <string name="pick_currency">Choisir une devise</string>
    <string name="CAD">dollar canadien</string>
    <string name="EUR">euro</string>
    <string name="USD">dollar américain</string>
    <string name="AUD">dollar australien</string>
    <string name="GBP">livre sterling</string>
    <string name="CHF">franc suisse</string>
    <string name="JPY">yen japonais</string>
    <string name="ZAR">rand sud africain</string>
    <string name="change_currency">Changer la devise</string>
    <string name="erase_all_data">Suppression de toutes les données</string>
    <string name="erase_all_data_message">Une suppression des données entrainera la perte irréversible de l\'ensemble de vos dépenses et catégories. \n\nÊtes-vous sûr de vouloir continuer ?</string>
    <string name="erase_all">Tout supprimer</string>
    <string name="successful_erased_data">Toutes les données ont été effacées !</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="successful_expense_deleted">Dépense supprimée</string>
    <string name="reset_day">Changer début du mois</string>
    <string name="reset_day_title">Premier jour du mois</string>
    <string name="choose_first_day_of_month">\nSélectionnez la date à laquelle vous souhaitez faire la réinitialisation mensuelle de vos budgets :</string>
    <string name="new_first_day_of_month1">Vos budgets seront réinitialisés tous les</string>
    <string name="new_first_day_of_month2">du mois.</string>
    <string name="dimanche">Dimanche</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="monthly_reset_process">Réinitialisation mensuelle des budgets en cours ...</string>
    <string name="each_month">Chaque mois</string>
    <string name="categories_sample">Exemples de catégories</string>

    <string name="used">Utilisé</string>
    <string name="left">Restant</string>
    <string name="epargne">Epargne</string>
    <string name="categoryTitle">Dépenses par catégories</string>
    <string name="totalbudget">Budget Total</string>
    <string name="nbBudget">Budgets</string>
    <string name="nbExpenses">Dépenses</string>
    <string name="modify_budget">Modifier le budget</string>
    <string name="delete_budget">Supprimer le budget</string>
    <string name="successful_category_modified">Catégorie modifiée avec succès !</string>
    <string name="existing_expenses_warning">La suppression de ce budget entrainera également la suppression de toutes ces dépenses associées. \n\nSi vous souhaitez les conserver, veuillez d\'abord les réaffecter.</string>
    <string name="existing_expenses_warning_title">Dépenses associées existantes</string>
    <string name="delete_budget_msg">Êtes-vous sûr de vouloir supprimer ce budget ?</string>
    <string name="successful_budget_deleted">Budget supprimé</string>
    <string name="delete_anyway">Supprimer quand même</string>
    <string name="edit">Editer</string>
    <string name="successful_edited_budget">Modification du budget effectuée</string>
    <string name="new_category">Nouvelle catégorie</string>
    <string name="photo_analysis">Analyse de la photo...</string>
    <string name="photo_analysis_cancelled">Analyse stoppée: impossible d\'extraire les informations.</string>
    <string name="contact_us">Contactez-nous</string>
    <string name="donation">Faire un don</string>
    <string name="credit">Crédits</string>
    <string name="icon_credit">Icon made by Roundicons from www.flaticon.com</string>
    <string name="no_expense" >Pas de dépense trouvée</string>
    <string name="click_here_expense">Cliquez simplement ici pour en ajouter une</string>
    <string name="no_budget">Aucun budget</string>
    <string name="click_here_budget">Cliquez ici pour en créer un nouveau</string>

</resources>
