<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repeatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/repeatEvery"
            android:textAppearance="@android:style/TextAppearance.DialogWindowTitle" />

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/popupRecurrenceChoix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:sc_border_width="2dp"
            app:sc_corner_radius="10dp">


            <RadioButton
                android:id="@+id/every_week"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_week" />

            <RadioButton
                android:id="@+id/every_month"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_month" />

            <RadioButton
                android:id="@+id/every_year"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_year" />
        </info.hoang8f.android.segmented.SegmentedGroup>

    </LinearLayout>

</LinearLayout>