<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="projet.ift2905.budgetocracy.MainActivity"
    tools:showIn="@layout/app_bar_main"
    >


    <!--android:layout_below = "@id/toolbarPosition"-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSortName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="55dp"
            android:text="@string/research_SortName"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonSortDate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="55dp"
            android:layout_alignBaseline="@+id/buttonSortName"
            android:text="@string/research_SortDate"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonSortAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="55dp"
            android:layout_alignBaseline="@+id/buttonSortDay"
            android:text="@string/research_SortAmount"
            android:layout_weight="1"/>


    </LinearLayout>

    <ListView
        android:id="@+id/lstExpenses"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="57dp"
        android:paddingLeft="10dp" />


</RelativeLayout>
